added list item component template ideas

--- a/documentation/app/styles/app.scss
+++ b/documentation/app/styles/app.scss
@@ -2,6 +2,24 @@
  * Copyright (c) HashiCorp, Inc.
  */
 
-@import 'tailwind';
-@import "@hashicorp/design-system-components";
 @import "@hashicorp/consul-ui-toolkit";
+@import "@hashicorp/design-system-components";
+
+pre, code {
+  border-radius: 6px;
+  background-color: black;
+  color: white;
+  font-size: 14px;
+  width: fit-content;
+  padding-right: 20px;
+}
+
+.list-container {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding-bottom: 12px;
+}
+body {
+  padding: 10px 40px;
+}
