--- a/toolkit/src/components/cut/list-item/index.hbs
+++ b/toolkit/src/components/cut/list-item/index.hbs
@@ -1,4 +1,4 @@
-<div class='cut-list-item'>
+<div class='cut-list-item{{if @isStatic '--static' ''}}'>
   {{yield (hash Content=(component "cut/list-item/content"))}}
   {{yield (hash Action=(component "cut/list-item/action"))}}
 </div>
