--- a/toolkit/src/styles/@hashicorp/consul-ui-toolkit.scss
+++ b/toolkit/src/styles/@hashicorp/consul-ui-toolkit.scss
@@ -1,1 +1,4 @@
 @use '../components/list-item';
+@use '../components/list-item-template';
+@use '../components/list-item-template-set';
+@use '../components/text-with-icon';
