--- a/toolkit/src/styles/components/list-item.scss
+++ b/toolkit/src/styles/components/list-item.scss
@@ -1,4 +1,6 @@
-.cut-list-item {
+@import '@hashicorp/design-system-components';
+
+%cut-list-item {
   display: flex;
   flex-direction: row;
   flex-grow: 0;
@@ -7,7 +9,23 @@
   padding: 12px;
   border-radius: 6px;
   gap: 8px;
-  box-shadow: 0px 0px 0px 1px rgba(101, 106, 118, 0.15), 0px 2px 3px rgba(101, 106, 118, 0.1), 0px 8px 16px -10px rgba(101, 106, 118, 0.2);
+}
+
+.cut-list-item {
+  @extend .hds-surface-mid;
+  @extend .hds-elevation-mid;
+  @extend %cut-list-item;
+}
+
+.cut-list-item:hover {
+  @extend .hds-surface-high;
+  @extend .hds-elevation-high;
+}
+
+.cut-list-item--static {
+  @extend .hds-surface-base;
+  @extend .hds-elevation-low;
+  @extend %cut-list-item;
 }
 
 .cut-list-item__content {
