added styles for list item template, changes list item

--- a/toolkit/src/components/cut/list-item/action.hbs
+++ b/toolkit/src/components/cut/list-item/action.hbs
@@ -1,4 +1,4 @@
-<div>
+<div {{on 'click' this.onActionClick}}>
   {{yield
     (hash Button=(component 'hds/button' size='small')
       Dropdown=(component "hds/dropdown")
