--- a/toolkit/src/components/cut/text-with-icon/index.hbs
+++ b/toolkit/src/components/cut/text-with-icon/index.hbs
@@ -1,4 +1,7 @@
 <div class="text-with-icon-container">
   <FlightIcon @name={{@icon}} @size="16"/>
   <div>{{@text}}</div>
+  {{#if @connection}}
+    <div class="text-with-icon--connection">{{@connection}}</div>
+  {{/if}}
 </div>
