--- a/toolkit/src/styles/components/list-item.scss
+++ b/toolkit/src/styles/components/list-item.scss
@@ -17,6 +17,21 @@
   @extend %cut-list-item;
 }
 
+.cut-list-item:focus,
+a.cut-list-item:focus,
+.cut-list-item:focus-visible,
+a.cut-list-item:focus-visible
+{
+  text-decoration: none;
+  outline: 3px solid var(--token-color-focus-action-external);
+  outline-offset: 1px;
+}
+
+a.cut-list-item {
+  text-decoration: none;
+  color: inherit;
+}
+
 .cut-list-item:hover {
   @extend .hds-surface-high;
   @extend .hds-elevation-high;
@@ -30,4 +45,50 @@
 
 .cut-list-item__content {
   flex: 1;
+}
+
+.cut-list-item-label {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.cut-list-item-label .title-row {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  align-items: center;
+}
+
+.cut-list-item-label--title {
+  @extend .hds-typography-body-300;
+  @extend .hds-font-weight-semibold;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.cut-list-item-label--metadata {
+  @media screen and (max-width: 500px) {
+    flex-direction: column;
+    align-items: start;
+  }
+
+  @extend .hds-typography-body-200;
+  @extend .hds-font-weight-regular;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+
+  color: var(--token-color-palette-neutral-500);
+}
+
+.cut-list-item-template {
+  @media screen and (max-width: 500px) {
+    flex-direction: column;
+  }
+
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
 }
