--- a/toolkit/src/components/cut/list-item/action.hbs
+++ b/toolkit/src/components/cut/list-item/action.hbs
@@ -1,3 +1,7 @@
+{{!
+  Copyright (c) HashiCorp, Inc.
+}}
+
 <div {{on 'click' this.onActionClick}}>
   {{yield
     (hash Button=(component "hds/button" size="small")
