added license details

--- a/toolkit/src/components/cut/list-item/label/index.hbs
+++ b/toolkit/src/components/cut/list-item/label/index.hbs
@@ -1,3 +1,7 @@
+{{!
+  Copyright (c) HashiCorp, Inc.
+}}
+
 <div class="cut-list-item-label">
   <div class="title-row">
     {{yield (hash Icon=(component 'flight-icon'))}}
