--- a/toolkit/src/components/cut/list-item/template/index.hbs
+++ b/toolkit/src/components/cut/list-item/template/index.hbs
@@ -1,3 +1,7 @@
+{{!
+  Copyright (c) HashiCorp, Inc.
+}}
+
 <div class="cut-list-item-template">
   {{yield (hash Label=(component 'cut/list-item/label'))}}
   <div>{{yield (hash
