--- a/toolkit/src/components/cut/list-item/label/metadata.hbs
+++ b/toolkit/src/components/cut/list-item/label/metadata.hbs
@@ -1,1 +1,5 @@
+{{!
+  Copyright (c) HashiCorp, Inc.
+}}
+
 <div class="cut-list-item-label--metadata hds-typography-body-200 hds-font-weight-regular">{{yield}}</div>
