--- a/toolkit/src/components/cut/list-item/label/title.hbs
+++ b/toolkit/src/components/cut/list-item/label/title.hbs
@@ -1,1 +1,5 @@
+{{!
+  Copyright (c) HashiCorp, Inc.
+}}
+
 <div class="cut-list-item-label--title hds-typography-body-300 hds-font-weight-semibold">{{yield}}</div>
