fixed after review

--- a/documentation/app/components/list-item/index.hbs
+++ b/documentation/app/components/list-item/index.hbs
@@ -16,7 +16,7 @@
       &lt;L.Content>Service b&lt;/L.Content&gt;
     &lt;/Cut::ListItem&gt;
   </code></pre>
-<div class="list-container">
+<div class="doc-list-container">
   <Cut::ListItem @route='dummy' as |L|>
     <L.Content>Element with route added</L.Content>
   </Cut::ListItem>
@@ -47,7 +47,7 @@
       &lt;L.Content>Service a&lt;/L.Content&gt;
     &lt;/Cut::ListItem&gt;
   </code></pre>
-<div class="list-container">
+<div class="doc-list-container">
   <Cut::ListItem as |L|>
     <L.Content>Service a</L.Content>
   </Cut::ListItem>
@@ -84,7 +84,7 @@
       &lt;/L.Action&gt;
     &lt;/Cut::ListItem&gt;
   </code></pre>
-<div class="list-container">
+<div class="doc-list-container">
   <Cut::ListItem as |L|>
     <L.Content>Service a</L.Content>
     <L.Action as |A|>
@@ -143,7 +143,7 @@
       &lt;/L.Action&gt;
     &lt;/Cut::ListItem&gt;
   </code></pre>
-<div class="list-container">
+<div class="doc-list-container">
   <Cut::ListItem as |L|>
     <L.Content>Service a</L.Content>
     <L.Action as |A|>
@@ -170,7 +170,7 @@
       &lt;/L.Action&gt;
     &lt;/Cut::ListItem&gt;
   </code></pre>
-<div class="list-container">
+<div class="doc-list-container">
   <Cut::ListItem as |L|>
     <L.Content>Service a</L.Content>
     <L.Action as |A|>
