--- a/toolkit/src/styles/components/list-item.scss
+++ b/toolkit/src/styles/components/list-item.scss
@@ -4,7 +4,7 @@
 
 @import '@hashicorp/design-system-components';
 
-%cut-list-item {
+.cut-list-item {
   display: flex;
   flex-direction: row;
   flex-grow: 0;
@@ -15,16 +15,10 @@
   gap: 8px;
 }
 
-.cut-list-item {
-  @extend .hds-surface-mid;
-  @extend .hds-elevation-mid;
-  @extend %cut-list-item;
-}
-
-.cut-list-item:focus,
-a.cut-list-item:focus,
-.cut-list-item:focus-visible,
-a.cut-list-item:focus-visible
+.cut-list-item.active:focus,
+a.cut-list-item.active:focus,
+.cut-list-item.active:focus-visible,
+a.cut-list-item.active:focus-visible
 {
   text-decoration: none;
   outline: 3px solid var(--token-color-focus-action-external);
@@ -36,21 +30,14 @@ a.cut-list-item {
   color: inherit;
 }
 
-.cut-list-item:hover {
-  @extend .hds-surface-high;
-  @extend .hds-elevation-high;
-}
-
-.cut-list-item--static {
-  @extend .hds-surface-base;
-  @extend .hds-elevation-low;
-  @extend %cut-list-item;
+.cut-list-item.active:hover {
+  box-shadow: var(--token-surface-high-box-shadow);
 }
 
 .cut-list-item__content {
   flex: 1;
 }
 
-.cut-list-item .cut-list-item__content {
+.cut-list-item.active .cut-list-item__content {
   cursor: pointer;
 }
