--- a/toolkit/src/components/cut/list-item/template/index.hbs
+++ b/toolkit/src/components/cut/list-item/template/index.hbs
@@ -6,7 +6,7 @@
   {{yield (hash Label=(component 'cut/list-item/label'))}}
   <div>{{yield (hash
                  Badge=(component 'hds/badge' size='small')
-                 FlightIcon=(component "flight-icon" size=16)
+                 Icon=(component "flight-icon" size=16)
                )}}
   </div>
   {{yield (hash Label2=(component 'cut/list-item/label'))}}
