--- a/documentation/app/components/list-item/index.hbs
+++ b/documentation/app/components/list-item/index.hbs
@@ -219,7 +219,7 @@
 </div>
 
 <h3>Templates</h3>
-<div class="list-container">
+<div class="doc-list-container">
   <Cut::ListItem @href="#" @isHrefExternal={{false}} as |L|>
     <L.Content>
       <Cut::ListItem::Template as |T|>
