--- a/toolkit/src/components/cut/list-item/index.hbs
+++ b/toolkit/src/components/cut/list-item/index.hbs
@@ -18,7 +18,7 @@
     </Hds::Interactive>
   {{else}}
     {{#if @onClick}}
-      <button type="button" class="cut-list-item active hds-surface-mid" {{on 'click' this.onClick}}>
+      <button type="button" class="cut-list-item active hds-surface-mid" {{on 'click' this.onClickAction}}>
         {{yield (hash Content=(component "cut/list-item/content"))}}
         {{yield (hash Action=(component "cut/list-item/action"))}}
       </button>
