--- a/toolkit/src/components/cut/list-item/label/index.hbs
+++ b/toolkit/src/components/cut/list-item/label/index.hbs
@@ -2,7 +2,7 @@
   Copyright (c) HashiCorp, Inc.
 }}
 
-<div class="cut-list-item-label">
+<div class="cut-list-item-label" ...attributes>
   <div class="title-row">
     {{yield (hash Icon=(component 'flight-icon'))}}
     {{yield (hash Title=(component 'cut/list-item/label/title'))}}
