--- a/toolkit/src/components/cut/list-item/label/title.hbs
+++ b/toolkit/src/components/cut/list-item/label/title.hbs
@@ -2,4 +2,4 @@
   Copyright (c) HashiCorp, Inc.
 }}
 
-<div class="cut-list-item-label--title hds-typography-body-300 hds-font-weight-semibold">{{yield}}</div>
+<div class="cut-list-item-label--title hds-typography-body-300 hds-font-weight-semibold" ...attributes>{{yield}}</div>
