--- a/toolkit/src/components/cut/list-item/label/metadata.hbs
+++ b/toolkit/src/components/cut/list-item/label/metadata.hbs
@@ -2,4 +2,4 @@
   Copyright (c) HashiCorp, Inc.
 }}
 
-<div class="cut-list-item-label--metadata hds-typography-body-200 hds-font-weight-regular">{{yield}}</div>
+<div class="cut-list-item-label--metadata hds-typography-body-200 hds-font-weight-regular" ...attributes>{{yield}}</div>
