--- a/toolkit/src/components/cut/list-item/index.hbs
+++ b/toolkit/src/components/cut/list-item/index.hbs
@@ -1,7 +1,7 @@
 {{!
   Copyright (c) HashiCorp, Inc.
 }}
-{{#if (or this.href this.route)}}
+{{#if (or this.href this.route @onClick)}}
   <Hds::Interactive
     class="cut-list-item active hds-surface-mid"
     @href={{this.href}}
@@ -10,21 +10,15 @@
     @isHrefExternal={{@isHrefExternal}}
     @query={{@query}}
     @replace={{@replace}}
+    {{on 'click' this.onClickAction}}
     ...attributes
   >
     {{yield (hash Content=(component "cut/list-item/content"))}}
     {{yield (hash Action=(component "cut/list-item/action"))}}
   </Hds::Interactive>
 {{else}}
-  {{#if @onClick}}
-    <button type="button" class="cut-list-item active hds-surface-mid" {{on 'click' this.onClickAction}} ...attributes>
-      {{yield (hash Content=(component "cut/list-item/content"))}}
-      {{yield (hash Action=(component "cut/list-item/action"))}}
-    </button>
-  {{else}}
-    <div class="cut-list-item hds-surface-base" ...attributes>
-      {{yield (hash Content=(component "cut/list-item/content"))}}
-      {{yield (hash Action=(component "cut/list-item/action"))}}
-    </div>
-  {{/if}}
+  <div class="cut-list-item hds-surface-base" ...attributes>
+    {{yield (hash Content=(component "cut/list-item/content"))}}
+    {{yield (hash Action=(component "cut/list-item/action"))}}
+  </div>
 {{/if}}
